esp32c6_rtdt_app/build/log/idf_py_stdout_output_223027
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/build/bootloader/esp-idf/esptool_py && /home/ronaldo/.espressif/python_env/idf5.4_py3.10_env/bin/python /home/ronaldo/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/build/bootloader/bootloader.bin
Bootloader binary size 0x5610 bytes. 0x29f0 bytes (33%) free.
[2/11] No install step for 'bootloader'
[3/11] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/web_server.c.obj
FAILED: esp-idf/src/CMakeFiles/__idf_src.dir/web_server.c.obj 
/home/ronaldo/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/build/config -I/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/include -I/home/ronaldo/esp/esp-idf/components/newlib/platform_include -I/home/ronaldo/esp/esp-idf/components/freertos/config/include -I/home/ronaldo/esp/esp-idf/components/freertos/config/include/freertos -I/home/ronaldo/esp/esp-idf/components/freertos/config/riscv/include -I/home/ronaldo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ronaldo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/ronaldo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/ronaldo/esp/esp-idf/components/freertos/esp_additions/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/dma/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/ronaldo/esp/esp-idf/components/heap/include -I/home/ronaldo/esp/esp-idf/components/heap/tlsf -I/home/ronaldo/esp/esp-idf/components/log/include -I/home/ronaldo/esp/esp-idf/components/soc/include -I/home/ronaldo/esp/esp-idf/components/soc/esp32c6 -I/home/ronaldo/esp/esp-idf/components/soc/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/soc/esp32c6/register -I/home/ronaldo/esp/esp-idf/components/hal/platform_port/include -I/home/ronaldo/esp/esp-idf/components/hal/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/hal/include -I/home/ronaldo/esp/esp-idf/components/esp_rom/include -I/home/ronaldo/esp/esp-idf/components/esp_rom/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/home/ronaldo/esp/esp-idf/components/esp_rom/esp32c6 -I/home/ronaldo/esp/esp-idf/components/esp_common/include -I/home/ronaldo/esp/esp-idf/components/esp_system/include -I/home/ronaldo/esp/esp-idf/components/esp_system/port/soc -I/home/ronaldo/esp/esp-idf/components/esp_system/port/include/riscv -I/home/ronaldo/esp/esp-idf/components/esp_system/port/include/private -I/home/ronaldo/esp/esp-idf/components/riscv/include -I/home/ronaldo/esp/esp-idf/components/lwip/include -I/home/ronaldo/esp/esp-idf/components/lwip/include/apps -I/home/ronaldo/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ronaldo/esp/esp-idf/components/lwip/lwip/src/include -I/home/ronaldo/esp/esp-idf/components/lwip/port/include -I/home/ronaldo/esp/esp-idf/components/lwip/port/freertos/include -I/home/ronaldo/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ronaldo/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ronaldo/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/ronaldo/esp/esp-idf/components/esp_wifi/include -I/home/ronaldo/esp/esp-idf/components/esp_wifi/include/local -I/home/ronaldo/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/ronaldo/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/ronaldo/esp/esp-idf/components/esp_event/include -I/home/ronaldo/esp/esp-idf/components/esp_phy/include -I/home/ronaldo/esp/esp-idf/components/esp_phy/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/esp_netif/include -I/home/ronaldo/esp/esp-idf/components/esp_http_server/include -I/home/ronaldo/esp/esp-idf/components/http_parser -I/home/ronaldo/esp/esp-idf/components/driver/deprecated -I/home/ronaldo/esp/esp-idf/components/driver/i2c/include -I/home/ronaldo/esp/esp-idf/components/driver/touch_sensor/include -I/home/ronaldo/esp/esp-idf/components/driver/twai/include -I/home/ronaldo/esp/esp-idf/components/esp_pm/include -I/home/ronaldo/esp/esp-idf/components/esp_ringbuf/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_gpio/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_pcnt/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_gptimer/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_spi/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_i2s/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/ronaldo/esp/esp-idf/components/sdmmc/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_sdspi/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_sdio/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_dac/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_rmt/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_tsens/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_sdm/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_i2c/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_uart/include -I/home/ronaldo/esp/esp-idf/components/vfs/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_ledc/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_parlio/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/ronaldo/esp/esp-idf/components/esp_timer/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app=. -fmacro-prefix-map=/home/ronaldo/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/src/CMakeFiles/__idf_src.dir/web_server.c.obj -MF esp-idf/src/CMakeFiles/__idf_src.dir/web_server.c.obj.d -o esp-idf/src/CMakeFiles/__idf_src.dir/web_server.c.obj -c /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/web_server.c
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/web_server.c:6:18: error: static declaration of 'root_get_handler' follows non-static declaration
    6 | static esp_err_t root_get_handler(httpd_req_t *req) {
      |                  ^~~~~~~~~~~~~~~~
In file included from /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/web_server.c:1:
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/include/web_server.h:14:11: note: previous declaration of 'root_get_handler' with type 'esp_err_t(httpd_req_t *)' {aka 'int(struct httpd_req *)'}
   14 | esp_err_t root_get_handler(httpd_req_t *req);
      |           ^~~~~~~~~~~~~~~~
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/web_server.c:33:18: error: static declaration of 'config_post_handler' follows non-static declaration
   33 | static esp_err_t config_post_handler(httpd_req_t *req) {
      |                  ^~~~~~~~~~~~~~~~~~~
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/include/web_server.h:15:11: note: previous declaration of 'config_post_handler' with type 'esp_err_t(httpd_req_t *)' {aka 'int(struct httpd_req *)'}
   15 | esp_err_t config_post_handler(httpd_req_t *req);
      |           ^~~~~~~~~~~~~~~~~~~
[4/11] Completed 'bootloader'
[5/11] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/main.c.obj
[6/11] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/app_tasks.c.obj
ninja: build stopped: subcommand failed.
